<resources>
    <string name="app_name">Hive Keychain</string>
    <string name="appwidget_text">Loading Data</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="my_image_description">Hive Keychain Logo</string>
    <string name="text_sample_100k">100,000.00</string>
    <string name="text_loading_number">...</string>
    <string name="default_empty_list_text">Setup your portfolio</string>
    <string name="widget_currency_list_receiver_label_name">Hive Ticker</string>
    <string name="widget_account_balance_list_receiver_label_name">Keychain Portfolio</string>
    <string name="widget_sample_currency">$100,000.00</string>
    <string name="widget_sample_number">100,000.00</string>
    <string name="widget_sample_account">\@account_user</string>
    <string name="widget_account_balance_list_account_value">Account Value</string>
    <string name="widget_account_balance_list_HIVE_label">HIVE</string>
    <string name="widget_account_balance_list_HP_label">HP</string>
    <string name="widget_account_balance_list_HBD_label">HBD</string>
    <string name="widget_account_balance_list_loading_text">Loading Accounts</string>
</resources>
